Fix header spacing

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,8 +4,7 @@ header {
   display: flex;
   background: black;
   width: 100%;
-  padding: .5rem;
-  margin: 0;
+  margin: 0 0 3em 0;
 }
 
 #site-logo {
